WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281424
[GLib] Fix WebKitSettings build for !ENABLE(VIDEO)
https://bugs.webkit.org/show_bug.cgi?id=281424
Summary
[GLib] Fix WebKitSettings build for !ENABLE(VIDEO)
Olivier Blin
Reported
2024-10-14 05:28:34 PDT
Since
278688@main
, WebKitSettings uses GUniquePtr for the config file parsing code. It should be explicitly included.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2024-10-14 05:30:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35147
EWS
Comment 2
2024-10-14 06:25:19 PDT
Committed
285120@main
(f5b337b6197d): <
https://commits.webkit.org/285120@main
> Reviewed commits have been landed. Closing PR #35147 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug