[GLib] Fix WebKitSettings build for !ENABLE(VIDEO) https://bugs.webkit.org/show_bug.cgi?id=281424

Reviewed by Adrian Perez de Castro.

Since 278688@main, WebKitSettings uses GUniquePtr for config file parsing.
The <wtf/glib/GUniquePtr.h> header should be explicitly included.

* Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp:

Canonical link: https://commits.webkit.org/285120@main